--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,51 @@
 body {
   background-color: #282c34;
+  font-family: "Open Sans", sans-serif;
 }
 
 .App {
   text-align: center;
-  max-width: 728px;
-  margin: 0 auto;
+  width: 580px;
+  height: 1080px;
+  margin: 100px auto;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  background-color: #141414;
+  zoom: 0.9;
 }
 
 .App header {
-  background-color: #181717;
-  height: 10vh;
-  min-height: 50px;
+  background-color: #41414246;
+  height: 80px;
+  width: 460px;
   color: white;
-  position: fixed;
-  width: 100%;
-  max-width: 728px;
-  top: 0;
+  position: absolute;
+  top: 150px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   z-index: 99;
   padding: 10px;
   box-sizing: border-box;
+  border-radius: 20px 20px 20px 20px;
 }
 
 .App section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
+  height: 94%;
+  width: 95%;
+  margin: 30px auto;
   background-color: rgb(40, 37, 53);
+  border-radius: 20px;
 }
 
 main {
   padding: 10px;
-  height: 80vh;
-  margin: 10vh 0 10vh;
+  height: 100%;
+  margin: 10vh 0 0 0;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -55,14 +64,17 @@ main::-webkit-scrollbar-thumb {
 }
 
 form {
-  height: 10vh;
-  position: fixed;
+  height: 160px;
+  position: relative;
   bottom: 0;
-  background-color: rgb(24, 23, 23);
+  background-color: #7979791a;
   width: 100%;
   max-width: 728px;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   font-size: 1.5rem;
+  border-radius: 10px;
 }
 
 form button {
@@ -71,26 +83,31 @@ form button {
 }
 
 input {
+  box-sizing: border-box;
   line-height: 1.5;
-  width: 100%;
+  width: 70%;
+  height: 70px;
   font-size: 1.5rem;
-  background: rgb(58, 58, 58);
+  background: rgb(36, 36, 36);
   color: white;
   outline: none;
+  padding: 20px;
   border: none;
-  padding: 0 10px;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 button {
-  background-color: #282c34; /* Green */
+  background-color: rgb(64, 55, 75);
   border: none;
-  color: white;
-  padding: 15px 32px;
+  color: rgb(255, 255, 255);
+  padding: 22px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
   font-size: 1.25rem;
+  border-radius: 10px;
 }
 
 button:disabled {
@@ -98,11 +115,28 @@ button:disabled {
   cursor: not-allowed;
 }
 
+.mobile-svg {
+  position: absolute;
+  transform: translateX(5px) translateY(-20px);
+  width: 500px;
+  height: 500px;
+}
+
 .sign-in {
-  color: #282c34;
+  position: relative;
+  top: 200px;
+  color: #292929;
   background: white;
   max-width: 400px;
-  margin: 0 auto;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.sign-out {
+  color: #fff;
+  background-color: rgb(64, 55, 75);
+  border-radius: 10px;
+  padding: 12px 25px;
 }
 
 ul,
